--- a/SIS4MIN-W/Views/EmpyView.xaml
+++ b/SIS4MIN-W/Views/EmpyView.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SIS4MIN_W.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="430" d:DesignWidth="600" Background="Transparent" 
+             Padding="20 0 20 0">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="txtTitle" HorizontalAlignment="Center" FontSize= "22"   FontFamily="Montserrat"  FontWeight="Bold" Margin="0 5" Text="Administracion de Usuarios"
+           Foreground="White" />
     </Grid>
 </UserControl>
