--- a/SIS4MIN-W/Ventanas/WinCajero.xaml
+++ b/SIS4MIN-W/Ventanas/WinCajero.xaml
@@ -40,18 +40,22 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Horizontal"
-                                Height="35"
+                                Height="auto"
+                                    VerticalAlignment="Bottom"
                                  Grid.Row="0"
+
                                 Margin="30,10,0,0" >
                             <TextBlock Text="CAJERO"
+                                       TextWrapping="Wrap"
+                                       x:Name="txtAutor"
                                    Foreground="{StaticResource titleColor2}"
                                    FontSize="20"
                                    FontFamily="Montserrat"
                                    FontWeight="Medium"/>
                         </StackPanel>
-                        <StackPanel Grid.Row="1">
+                        <StackPanel Grid.Row="1" Margin="0 20 0 0">
                             <RadioButton Style="{StaticResource menuButton}"
-                                 GroupName="Views" Tag="Vista1" Checked="RadioButton_Checked">
+                                 x:Name="btnInit" GroupName="Views" Tag="Vista1" Checked="RadioButton_Checked">
                                 <StackPanel Orientation="Horizontal">
                                     <fa:IconImage Icon="Sellsy" Style="{StaticResource menuButtonIcon}" Foreground="{StaticResource color3}"/>
                                     
