--- a/SIS4MIN-W/Alerts/MessageP.xaml
+++ b/SIS4MIN-W/Alerts/MessageP.xaml
@@ -38,7 +38,7 @@
                     </StackPanel>
                 </Border>
                 <Grid Grid.Row="1" Background="White">
-                    <TextBlock  x:Name="txtContenido" Text="Mensaje"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10"/>
+                    <TextBlock  x:Name="txtContenido" Text="Mensaje" FontSize="15" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10"/>
                 </Grid>
 
 
